# cahn-hilliard

./: .cproject  .gitignore  .project  ARCHITECTURE.md  CMakeLists.txt  CMakePresets.json  README.md  ch.cpp  ch_fft.cpp  ch_ldm.cpp  ch_ldm_binary.cpp  ch_ldm_binary_fft.cpp  compile.sh  movie.py  plot.py  plot_saleh.py  select_compute_arch.cmake
examples/landau/: input.toml
examples/simple_wertheim/: input.toml
examples/wertheim/: generic.toml  ricci.toml  ricci_generic.toml  saleh.toml  simple.toml
prototypes/: auxiliary_variable.py  calculate_gamma.py  finite_volume.py
split_files/: ch.cpp  ch_ldm.cpp
src/: CMakeLists.txt  CahnHilliard.cpp  CahnHilliard.h  Object.cpp  Object.h  SimulationState.cpp  SimulationState.h  defs.h  defs_CUDA.h  main.cpp
src/CUDA/: CahnHilliard.cu  CahnHilliard.cuh  grid_utils.cuh
src/CUDA/integrators/: CUDAIntegrator.cu  CUDAIntegrator.h  EulerCUDA.cu  EulerCUDA.h  EulerMobilityCUDA.cu  EulerMobilityCUDA.h  PseudospectralCUDA.cu  PseudospectralCUDA.h
src/CUDA/models/: GenericWertheim.cu  GenericWertheim.cuh  Landau.cu  Landau.cuh  RicciWertheim.cu  RicciWertheim.cuh  SalehWertheim.cu  SalehWertheim.cuh  SimpleWertheim.cu  SimpleWertheim.cuh
src/integrators/: BailoFiniteVolume.cpp  BailoFiniteVolume.h  EulerCPU.cpp  EulerCPU.h  EulerMobilityCPU.cpp  EulerMobilityCPU.h  GelMobilityCPU.cpp  GelMobilityCPU.h  Integrator.cpp  Integrator.h  PseudospectralCPU.cpp  PseudospectralCPU.h  PseudospectralMobilityCPU.cpp  PseudospectralMobilityCPU.h  SemiImplicitMobilityCPU.cpp  SemiImplicitMobilityCPU.h
src/mobility/: ConstantMobility.h  FreeEnergyMobility.h  GelMobility.h  IMobility.cpp  IMobility.h  RegularisedMobility.h
src/models/: FreeEnergyModel.h  GenericWertheim.cpp  GenericWertheim.h  Landau.cpp  Landau.h  RicciWertheim.cpp  RicciWertheim.h  SalehWertheim.cpp  SalehWertheim.h  SimpleWertheim.cpp  SimpleWertheim.h
src/models/CUDA/: SimpleWertheim.cu  SimpleWertheim.cuh
src/utils/: Delta.cpp  Delta.h  Gradient.h  MultiField.h  Printer.cpp  Printer.h  RhoMatrix.h  strings.cpp  strings.h  utility_functions.h  write_confs.h
tests/: generate_landau_references.py  test_landau.py  test_mass_conservation.py
tests/data/: simple_landau.toml
utils/: init_ldm.py  movie.py  plot.py  plot_saleh.py  sq_from_traj.py
